--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -40,3 +40,6 @@ jobs:
           prefix: coverage
       - store_test_results:
           path: test-results.xml
+      - run:
+          name: Deploy To Heroku
+          command: git push https://heroku:$HEROKU_API_KEY@git.heroku.com/$HEROKU_APP_NAME.git main
